# fraud-detection-mlops

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  retrain.yml
data/raw/: creditcard_2023.csv
docker/: README.md  entrypoint.sh
notebooks/: 01_eda_and_experiments.ipynb
src/fraud_detection/: __init__.py  config.py  logging_utils.py
src/fraud_detection/api/: __init__.py  app.py  model_loader.py  schemas.py
src/fraud_detection/data/: __init__.py  ingest.py  mongo_client.py  preprocess.py  schema.py
src/fraud_detection/models/: __init__.py  evaluate.py  factory.py  mlflow_utils.py  register.py  train.py  tune.py
src/fraud_detection/pipeline/: __init__.py  stages.py
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_data_ingest.py  test_data_preprocess.py  test_data_schema.py  test_models_evaluate.py  test_models_factory.py  test_models_register.py
