[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fraud-detection-module"
version = "0.0.1"
description = "End-to-end MLOps pipeline for credit card fraud detection"
authors = [
  { name = "Harshith" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["fraud-detection-module"]
include = ["pyproject.toml", "fraud-detection-module/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fraud-detection-module"]
force-sort-within-sections = true

